# backend-test

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
data/: compounds.csv  user_experiments.csv  users.csv
src/backend_test/: api.py  etl.py
src/sql/: init.sql
tests/: test_etl.py
